kube/deployment-device.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alphamon-device
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alphamon-device
    spec:
      containers:
        - name: alphamon-device
          image: gcr.io/alphamon-982144/alphamon-device:v5
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /device/apikey
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 5


---
apiVersion: v1
kind: Service
metadata:
  name: alphamon-device
  labels:
    name: alphamon-device
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: alphamon-device
  type: LoadBalancer
